--- a/03_LangChain/01_LangChain.ipynb
+++ b/03_LangChain/01_LangChain.ipynb
@@ -50,6 +50,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "id": "ae8c4106",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: dotenv in c:\\programdata\\miniforge3\\envs\\jin\\lib\\site-packages (0.9.9)\n",
+      "Requirement already satisfied: python-dotenv in c:\\programdata\\miniforge3\\envs\\jin\\lib\\site-packages (from dotenv) (1.2.1)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%pip install dotenv"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "0985030c",
    "metadata": {},
@@ -231,7 +251,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "test0116",
+   "display_name": "jin",
    "language": "python",
    "name": "python3"
   },
