--- a/03_LangChain/01_LangChain.ipynb
+++ b/03_LangChain/01_LangChain.ipynb
@@ -70,10 +70,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "0985030c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OPENAI_API_KEY가 설정되어 있나요?: sk-proj-7l...\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "from dotenv import load_dotenv\n",
@@ -96,10 +104,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
+   "id": "28cc2cbd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: langchain in c:\\programdata\\miniforge3\\envs\\jin\\lib\\site-packages (1.2.4)\n",
+      "Collecting openai\n",
+      "  Downloading openai-2.15.0-py3-none-any.whl.metadata (29 kB)\n",
+      "Collecting langchain-openai\n",
+      "  Downloading langchain_openai-1.1.7-py3-none-any.whl.metadata (2.6 kB)\n",
+      "Requirement already satisfied: langchain-core<2.0.0,>=1.2.1 in c:\\programdata\\miniforge3\\envs\\jin\\lib\\site-packages (from langchain) (1.2.7)\n",
+      "Requirement already satisfied: langgraph<1.1.0,>=1.0.2 in c:\\programdata\\miniforge3\\envs\\jin\\lib\\site-packages (from langchain) (1.0.6)\n",
+      "Requirement already satisfied: pydantic<3.0.0,>=2.7.4 in c:\\programdata\\miniforge3\\envs\\jin\\lib\\site-packages (from langchain) (2.12.5)\n",
+      "Requirement already satisfied: jsonpatch<2.0.0,>=1.33.0 in c:\\programdata\\miniforge3\\envs\\jin\\lib\\site-packages (from langchain-core<2.0.0,>=1.2.1->langchain) (1.33)\n",
+      "Requirement already satisfied: langsmith<1.0.0,>=0.3.45 in c:\\programdata\\miniforge3\\envs\\jin\\lib\\site-packages (from langchain-core<2.0.0,>=1.2.1->langchain) (0.6.4)\n",
+      "Requirement already satisfied: packaging<26.0.0,>=23.2.0 in c:\\programdata\\miniforge3\\envs\\jin\\lib\\site-packages (from langchain-core<2.0.0,>=1.2.1->langchain) (25.0)\n",
+      "Requirement already satisfied: pyyaml<7.0.0,>=5.3.0 in c:\\programdata\\miniforge3\\envs\\jin\\lib\\site-packages (from langchain-core<2.0.0,>=1.2.1->langchain) (6.0.3)\n",
+      "Requirement already satisfied: tenacity!=8.4.0,<10.0.0,>=8.1.0 in c:\\programdata\\miniforge3\\envs\\jin\\lib\\site-packages (from langchain-core<2.0.0,>=1.2.1->langchain) (9.1.2)\n",
+      "Requirement already satisfied: typing-extensions<5.0.0,>=4.7.0 in c:\\programdata\\miniforge3\\envs\\jin\\lib\\site-packages (from langchain-core<2.0.0,>=1.2.1->langchain) (4.15.0)\n",
+      "Requirement already satisfied: uuid-utils<1.0,>=0.12.0 in c:\\programdata\\miniforge3\\envs\\jin\\lib\\site-packages (from langchain-core<2.0.0,>=1.2.1->langchain) (0.13.0)\n",
+      "Requirement already satisfied: jsonpointer>=1.9 in c:\\programdata\\miniforge3\\envs\\jin\\lib\\site-packages (from jsonpatch<2.0.0,>=1.33.0->langchain-core<2.0.0,>=1.2.1->langchain) (3.0.0)\n",
+      "Requirement already satisfied: langgraph-checkpoint<5.0.0,>=2.1.0 in c:\\programdata\\miniforge3\\envs\\jin\\lib\\site-packages (from langgraph<1.1.0,>=1.0.2->langchain) (4.0.0)\n",
+      "Requirement already satisfied: langgraph-prebuilt<1.1.0,>=1.0.2 in c:\\programdata\\miniforge3\\envs\\jin\\lib\\site-packages (from langgraph<1.1.0,>=1.0.2->langchain) (1.0.6)\n",
+      "Requirement already satisfied: langgraph-sdk<0.4.0,>=0.3.0 in c:\\programdata\\miniforge3\\envs\\jin\\lib\\site-packages (from langgraph<1.1.0,>=1.0.2->langchain) (0.3.3)\n",
+      "Requirement already satisfied: xxhash>=3.5.0 in c:\\programdata\\miniforge3\\envs\\jin\\lib\\site-packages (from langgraph<1.1.0,>=1.0.2->langchain) (3.6.0)\n",
+      "Requirement already satisfied: ormsgpack>=1.12.0 in c:\\programdata\\miniforge3\\envs\\jin\\lib\\site-packages (from langgraph-checkpoint<5.0.0,>=2.1.0->langgraph<1.1.0,>=1.0.2->langchain) (1.12.1)\n",
+      "Requirement already satisfied: httpx>=0.25.2 in c:\\programdata\\miniforge3\\envs\\jin\\lib\\site-packages (from langgraph-sdk<0.4.0,>=0.3.0->langgraph<1.1.0,>=1.0.2->langchain) (0.28.1)\n",
+      "Requirement already satisfied: orjson>=3.10.1 in c:\\programdata\\miniforge3\\envs\\jin\\lib\\site-packages (from langgraph-sdk<0.4.0,>=0.3.0->langgraph<1.1.0,>=1.0.2->langchain) (3.11.5)\n",
+      "Requirement already satisfied: requests-toolbelt>=1.0.0 in c:\\programdata\\miniforge3\\envs\\jin\\lib\\site-packages (from langsmith<1.0.0,>=0.3.45->langchain-core<2.0.0,>=1.2.1->langchain) (1.0.0)\n",
+      "Requirement already satisfied: requests>=2.0.0 in c:\\programdata\\miniforge3\\envs\\jin\\lib\\site-packages (from langsmith<1.0.0,>=0.3.45->langchain-core<2.0.0,>=1.2.1->langchain) (2.32.5)\n",
+      "Requirement already satisfied: zstandard>=0.23.0 in c:\\programdata\\miniforge3\\envs\\jin\\lib\\site-packages (from langsmith<1.0.0,>=0.3.45->langchain-core<2.0.0,>=1.2.1->langchain) (0.25.0)\n",
+      "Requirement already satisfied: anyio in c:\\programdata\\miniforge3\\envs\\jin\\lib\\site-packages (from httpx>=0.25.2->langgraph-sdk<0.4.0,>=0.3.0->langgraph<1.1.0,>=1.0.2->langchain) (4.12.1)\n",
+      "Requirement already satisfied: certifi in c:\\programdata\\miniforge3\\envs\\jin\\lib\\site-packages (from httpx>=0.25.2->langgraph-sdk<0.4.0,>=0.3.0->langgraph<1.1.0,>=1.0.2->langchain) (2026.1.4)\n",
+      "Requirement already satisfied: httpcore==1.* in c:\\programdata\\miniforge3\\envs\\jin\\lib\\site-packages (from httpx>=0.25.2->langgraph-sdk<0.4.0,>=0.3.0->langgraph<1.1.0,>=1.0.2->langchain) (1.0.9)\n",
+      "Requirement already satisfied: idna in c:\\programdata\\miniforge3\\envs\\jin\\lib\\site-packages (from httpx>=0.25.2->langgraph-sdk<0.4.0,>=0.3.0->langgraph<1.1.0,>=1.0.2->langchain) (3.11)\n",
+      "Requirement already satisfied: h11>=0.16 in c:\\programdata\\miniforge3\\envs\\jin\\lib\\site-packages (from httpcore==1.*->httpx>=0.25.2->langgraph-sdk<0.4.0,>=0.3.0->langgraph<1.1.0,>=1.0.2->langchain) (0.16.0)\n",
+      "Requirement already satisfied: annotated-types>=0.6.0 in c:\\programdata\\miniforge3\\envs\\jin\\lib\\site-packages (from pydantic<3.0.0,>=2.7.4->langchain) (0.7.0)\n",
+      "Requirement already satisfied: pydantic-core==2.41.5 in c:\\programdata\\miniforge3\\envs\\jin\\lib\\site-packages (from pydantic<3.0.0,>=2.7.4->langchain) (2.41.5)\n",
+      "Requirement already satisfied: typing-inspection>=0.4.2 in c:\\programdata\\miniforge3\\envs\\jin\\lib\\site-packages (from pydantic<3.0.0,>=2.7.4->langchain) (0.4.2)\n",
+      "Collecting distro<2,>=1.7.0 (from openai)\n",
+      "  Downloading distro-1.9.0-py3-none-any.whl.metadata (6.8 kB)\n",
+      "Collecting jiter<1,>=0.10.0 (from openai)\n",
+      "  Downloading jiter-0.12.0-cp312-cp312-win_amd64.whl.metadata (5.3 kB)\n",
+      "Collecting sniffio (from openai)\n",
+      "  Downloading sniffio-1.3.1-py3-none-any.whl.metadata (3.9 kB)\n",
+      "Collecting tqdm>4 (from openai)\n",
+      "  Downloading tqdm-4.67.1-py3-none-any.whl.metadata (57 kB)\n",
+      "Collecting tiktoken<1.0.0,>=0.7.0 (from langchain-openai)\n",
+      "  Downloading tiktoken-0.12.0-cp312-cp312-win_amd64.whl.metadata (6.9 kB)\n",
+      "Collecting regex>=2022.1.18 (from tiktoken<1.0.0,>=0.7.0->langchain-openai)\n",
+      "  Downloading regex-2026.1.15-cp312-cp312-win_amd64.whl.metadata (41 kB)\n",
+      "Requirement already satisfied: charset_normalizer<4,>=2 in c:\\programdata\\miniforge3\\envs\\jin\\lib\\site-packages (from requests>=2.0.0->langsmith<1.0.0,>=0.3.45->langchain-core<2.0.0,>=1.2.1->langchain) (3.4.4)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\programdata\\miniforge3\\envs\\jin\\lib\\site-packages (from requests>=2.0.0->langsmith<1.0.0,>=0.3.45->langchain-core<2.0.0,>=1.2.1->langchain) (2.6.3)\n",
+      "Requirement already satisfied: colorama in c:\\programdata\\miniforge3\\envs\\jin\\lib\\site-packages (from tqdm>4->openai) (0.4.6)\n",
+      "Downloading openai-2.15.0-py3-none-any.whl (1.1 MB)\n",
+      "   ---------------------------------------- 0.0/1.1 MB ? eta -:--:--\n",
+      "   ---------------------------------------- 1.1/1.1 MB 26.0 MB/s  0:00:00\n",
+      "Downloading distro-1.9.0-py3-none-any.whl (20 kB)\n",
+      "Downloading jiter-0.12.0-cp312-cp312-win_amd64.whl (205 kB)\n",
+      "Downloading langchain_openai-1.1.7-py3-none-any.whl (84 kB)\n",
+      "Downloading tiktoken-0.12.0-cp312-cp312-win_amd64.whl (878 kB)\n",
+      "   ---------------------------------------- 0.0/878.7 kB ? eta -:--:--\n",
+      "   ---------------------------------------- 878.7/878.7 kB 38.5 MB/s  0:00:00\n",
+      "Downloading regex-2026.1.15-cp312-cp312-win_amd64.whl (277 kB)\n",
+      "Downloading tqdm-4.67.1-py3-none-any.whl (78 kB)\n",
+      "Downloading sniffio-1.3.1-py3-none-any.whl (10 kB)\n",
+      "Installing collected packages: tqdm, sniffio, regex, jiter, distro, tiktoken, openai, langchain-openai\n",
+      "\n",
+      "   ------------------------------ --------- 6/8 [openai]\n",
+      "   ------------------------------ --------- 6/8 [openai]\n",
+      "   ------------------------------ --------- 6/8 [openai]\n",
+      "   ------------------------------ --------- 6/8 [openai]\n",
+      "   ------------------------------ --------- 6/8 [openai]\n",
+      "   ------------------------------ --------- 6/8 [openai]\n",
+      "   ----------------------------------- ---- 7/8 [langchain-openai]\n",
+      "   ---------------------------------------- 8/8 [langchain-openai]\n",
+      "\n",
+      "Successfully installed distro-1.9.0 jiter-0.12.0 langchain-openai-1.1.7 openai-2.15.0 regex-2026.1.15 sniffio-1.3.1 tiktoken-0.12.0 tqdm-4.67.1\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%pip install langchain openai langchain-openai"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "5b722601",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "모델이 성공적으로 초기화되었습니다!\n"
+     ]
+    }
+   ],
    "source": [
     "from langchain.chat_models import init_chat_model\n",
     "\n",
@@ -120,10 +227,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "bcc3bd38",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AI 응답:\n",
+      "안녕하세요! LangChain은 자연어 처리(NLP)와 관련된 다양한 작업을 수행할 수 있도록 돕는 프레임워크입니다. 주로 언어 모델을 활용하여 애플리케이션을 구축하는 데 사용되며, 다음과 같은 주요 기능을 제공합니다:\n",
+      "\n",
+      "1. **체인**: 여러 작업을 순차적으로 연결하여 복잡한 작업을 수행할 수 있는 체인을 구성할 수 있습니다. 예를 들어, 텍스트 생성 후 그 결과를 분석하는 등의 작업을 체인으로 연결할 수 있습니다.\n",
+      "\n",
+      "2. **프롬프트 관리**: 자연어 모델에 대한 입력 프롬프트를 효율적으로 관리하고 최적화할 수 있는 도구를 제공합니다.\n",
+      "\n",
+      "3. **메모리**: 대화형 애플리케이션에서 이전 대화 내용을 기억하고 활용할 수 있는 메모리 기능을 지원합니다.\n",
+      "\n",
+      "4. **API 통합**: 다양한 데이터 소스와 API를 통합하여 언어 모델의 기능을 확장할 수 있습니다.\n",
+      "\n",
+      "5. **모듈화**: 다양한 언어 모델과 도구를 손쉽게 결합하여 맞춤형 솔루션을 만들 수 있도록 설계되었습니다.\n",
+      "\n",
+      "LangChain은 개발자들이 언어 모델을 활용한 애플리케이션을 보다 쉽게 구축하고 관리할 수 있도록 돕는 강력한 도구입니다.\n"
+     ]
+    }
+   ],
    "source": [
     "# 간단한 메시지 전송\n",
     "# invoke : 실행명령어\n",
@@ -135,10 +263,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "c06d6c22",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "content='안녕하세요! LangChain은 자연어 처리(NLP)와 관련된 다양한 작업을 수행할 수 있도록 돕는 프레임워크입니다. 주로 언어 모델을 활용하여 애플리케이션을 구축하는 데 사용되며, 다음과 같은 주요 기능을 제공합니다:\\n\\n1. **체인**: 여러 작업을 순차적으로 연결하여 복잡한 작업을 수행할 수 있는 체인을 구성할 수 있습니다. 예를 들어, 텍스트 생성 후 그 결과를 분석하는 등의 작업을 체인으로 연결할 수 있습니다.\\n\\n2. **프롬프트 관리**: 자연어 모델에 대한 입력 프롬프트를 효율적으로 관리하고 최적화할 수 있는 도구를 제공합니다.\\n\\n3. **메모리**: 대화형 애플리케이션에서 이전 대화 내용을 기억하고 활용할 수 있는 메모리 기능을 지원합니다.\\n\\n4. **API 통합**: 다양한 데이터 소스와 API를 통합하여 언어 모델의 기능을 확장할 수 있습니다.\\n\\n5. **모듈화**: 다양한 언어 모델과 도구를 손쉽게 결합하여 맞춤형 솔루션을 만들 수 있도록 설계되었습니다.\\n\\nLangChain은 개발자들이 언어 모델을 활용한 애플리케이션을 보다 쉽게 구축하고 관리할 수 있도록 돕는 강력한 도구입니다.' additional_kwargs={'refusal': None} response_metadata={'token_usage': {'completion_tokens': 291, 'prompt_tokens': 20, 'total_tokens': 311, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_provider': 'openai', 'model_name': 'gpt-4o-mini-2024-07-18', 'system_fingerprint': 'fp_c4585b5b9c', 'id': 'chatcmpl-CyXVI7y1hV5Fm3mtOs1qva9dZpToC', 'service_tier': 'default', 'finish_reason': 'stop', 'logprobs': None} id='lc_run--019bc577-82df-77e2-8145-f7ff8c39e3d8-0' tool_calls=[] invalid_tool_calls=[] usage_metadata={'input_tokens': 20, 'output_tokens': 291, 'total_tokens': 311, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}}\n"
+     ]
+    }
+   ],
    "source": [
     "print(response)"
    ]
@@ -169,10 +305,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "10538b8e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "안녕하세요! LangChain은 자연어 처리(NLP)와 관련된 다양한 작업을 수행할 수 있도록 돕는 프레임워크입니다. 주로 언어 모델을 활용하여 애플리케이션을 구축하는 데 사용되며, 다음과 같은 주요 기능을 제공합니다:\n",
+      "\n",
+      "1. **체인**: 여러 작업을 순차적으로 연결하여 복잡한 작업을 수행할 수 있는 체인을 구성할 수 있습니다. 예를 들어, 텍스트 생성 후 그 결과를 분석하는 등의 작업을 체인으로 연결할 수 있습니다.\n",
+      "\n",
+      "2. **프롬프트 관리**: 자연어 모델에 대한 입력 프롬프트를 효율적으로 관리하고 최적화할 수 있는 도구를 제공합니다.\n",
+      "\n",
+      "3. **메모리**: 대화형 애플리케이션에서 이전 대화 내용을 기억하고 활용할 수 있는 메모리 기능을 지원합니다.\n",
+      "\n",
+      "4. **API 통합**: 다양한 데이터 소스와 API를 통합하여 언어 모델의 기능을 확장할 수 있습니다.\n",
+      "\n",
+      "5. **모듈화**: 다양한 언어 모델과 도구를 손쉽게 결합하여 맞춤형 솔루션을 만들 수 있도록 설계되었습니다.\n",
+      "\n",
+      "LangChain은 개발자들이 언어 모델을 활용한 애플리케이션을 보다 쉽게 구축하고 관리할 수 있도록 돕는 강력한 도구입니다.\n"
+     ]
+    }
+   ],
    "source": [
     "print(response.content)"
    ]
@@ -203,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "9b6e0283",
    "metadata": {},
    "outputs": [],
@@ -215,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "4ea5652a",
    "metadata": {},
    "outputs": [],
@@ -226,13 +382,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "1c556453",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "고양이는 포유류에 속하는 동물로, 과학적으로는 '펠리스 카투스' (Felis catus)로 분류됩니다. 고양이는 일반적으로 작은 체구와 유연한 몸, 날카로운 발톱과 뛰어난 감각을 가진 육식성 동물입니다. 주로 집에서 기르는 애완동물로 알려져 있으며, 사람들과의 유대감이 강하고 다양한 성격을 가지고 있습니다.\n",
+      "\n",
+      "고양이는 뛰어난 사냥 능력을 가지고 있어 작은 설치류나 곤충을 잡는 데 능숙하며, 그들의 독립적인 성격 때문에 주인과의 관계에서도 자율성을 중요시하는 경향이 있습니다. 또한, 고양이는 다양한 품종이 있으며, 각 품종마다 특징적인 외모와 성격을 가지고 있습니다. \n",
+      "\n",
+      "고양이는 사람들에게 사랑과 동반자로서 큰 행복을 주는 존재입니다.\n"
+     ]
+    }
+   ],
    "source": [
     "# 유저 입력\n",
-    "input = \"Retrieval\"\n",
+    "input = \"고양이\"\n",
     "\n",
     "# 응답 출력\n",
     "response = chain.invoke(input)\n",
