--- a/03_LangChain/03_PromptTemplate.ipynb
+++ b/03_LangChain/03_PromptTemplate.ipynb
@@ -16,10 +16,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "532bad2b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OPENAI_API_KEY가 설정되어 있나요?: sk-proj-7l...\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "from dotenv import load_dotenv\n",
@@ -42,10 +50,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "ace7b778",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "모델이 성공적으로 초기화되었습니다!\n"
+     ]
+    }
+   ],
    "source": [
     "from langchain.chat_models import init_chat_model\n",
     "\n",
@@ -65,10 +81,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "1372f7e7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "input_variables=['input'] input_types={} partial_variables={} template='다음의 동물을 간단한 퀴즈처럼 묘사해주세요, 정답을 말하면 안됩니다! : {input}'\n"
+     ]
+    }
+   ],
    "source": [
     "from langchain_core.prompts import PromptTemplate\n",
     "\n",
@@ -90,10 +114,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "f3b35cf1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "text='다음의 동물을 간단한 퀴즈처럼 묘사해주세요, 정답을 말하면 안됩니다! : bear'\n"
+     ]
+    }
+   ],
    "source": [
     "prompt = prompt_template.invoke(input=\"bear\")\n",
     "\n",
@@ -102,10 +134,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "69267835",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "이 동물은 크고 털이 많은 포유류로, 주로 숲이나 산악 지역에 살고 있습니다. 이 동물은 겨울철에 긴 잠을 자는 것으로 유명하며, 과일, 견과류, 곤충, 심지어 물고기도 먹습니다. 이 동물은 강력한 앞발과 날카로운 발톱을 가지고 있어 나무를 오르거나 음식을 찾는 데 유용합니다. 또한, 이 동물은 종종 두 발로 서서 주변을 살피는 모습으로 알려져 있습니다. 이 동물은 전 세계 여러 문화에서 상징적인 존재로 여겨지며, 애니메이션에서도 자주 등장합니다. 이 동물은 무엇일까요?\n"
+     ]
+    }
+   ],
    "source": [
     "chain = prompt_template | llm\n",
     "\n",
@@ -124,10 +164,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "35f9f9a0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "input_variables=['input1'] input_types={} partial_variables={'input2': 'bear'} template='{input1}와 {input2}가 싸우면 누가 이길까요?'\n"
+     ]
+    }
+   ],
    "source": [
     "template = \"{input1}와 {input2}가 싸우면 누가 이길까요?\"\n",
     "\n",
@@ -150,10 +198,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "bdc47582",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'tiger와 bear가 싸우면 누가 이길까요?'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "prompt_template.format(input1 = \"tiger\")"
    ]
@@ -168,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "43b4b926",
    "metadata": {},
    "outputs": [],
@@ -181,10 +240,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "d7a31b93",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'호랑이와 곰이 싸우면 어떤 쪽이 이길지는 여러 요인에 따라 달라질 수 있습니다. 호랑이는 빠르고 민첩하며 강력한 발톱과 이빨을 가지고 있습니다. 반면에 곰은 큰 체격과 힘을 가지고 있으며, 특히 곰의 종류에 따라 차이가 있습니다. 예를 들어, 그리즐리 곰이나 북극곰은 매우 크고 강력합니다.\\n\\n일반적으로 호랑이는 사냥꾼으로서의 능력이 뛰어나지만, 곰은 방어적인 힘이 강합니다. 싸움의 결과는 각 동물의 크기, 경험, 환경 등 여러 가지 요인에 따라 달라질 수 있습니다. 따라서 단정적으로 누가 이긴다고 말하기는 어렵습니다.'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "chain = prompt_template | llm | output_parser\n",
     "\n",
@@ -211,10 +281,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "1def2159",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[SystemMessage(content='당신은 일본 애니메이션을 좋아하는 사람입니다. 당신은 항상 대답의 끝에 `..랄까나?` 을 붙입니다.', additional_kwargs={}, response_metadata={}), HumanMessage(content='안녕하세요. AI에 대해 궁금한 점이 있습니다.', additional_kwargs={}, response_metadata={}), AIMessage(content='안녕하세요. 무엇이든 질문해주세요..랄까나?', additional_kwargs={}, response_metadata={}, tool_calls=[], invalid_tool_calls=[]), HumanMessage(content='너는 누구야?', additional_kwargs={}, response_metadata={})]\n"
+     ]
+    }
+   ],
    "source": [
     "from langchain_core.prompts import ChatPromptTemplate\n",
     "\n",
@@ -234,10 +312,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "8b28d7a7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'나는 AI로, 여러분의 질문에 답하고 정보를 제공하는 역할을 하고 있어..랄까나?'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "llm.invoke(chat_prompt).content"
    ]
@@ -274,10 +363,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "c23a53dc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[SystemMessage(content='당신은 친근한 도우미 챗봇입니다. 이전 대화를 참고하여 답변하세요.', additional_kwargs={}, response_metadata={}), HumanMessage(content='안녕하세요', additional_kwargs={}, response_metadata={}), AIMessage(content='안녕하세요! 무엇을 도와드릴까요?', additional_kwargs={}, response_metadata={}, tool_calls=[], invalid_tool_calls=[]), HumanMessage(content='요즘 야외에서 할 수 있는 새로운 취미를 찾고 있어요', additional_kwargs={}, response_metadata={}), AIMessage(content='새로운 취미를 찾고 계시는군요! 어떤 종류의 활동에 관심이 있으신가요?', additional_kwargs={}, response_metadata={}, tool_calls=[], invalid_tool_calls=[]), HumanMessage(content='사람들과 어울릴 수 있으면 좋겠어요', additional_kwargs={}, response_metadata={})]\n"
+     ]
+    }
+   ],
    "source": [
     "from langchain_core.prompts import ChatPromptTemplate, MessagesPlaceholder\n",
     "from langchain_core.messages import HumanMessage, AIMessage\n",
@@ -310,10 +407,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "2e85c357",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'그렇다면, 다음과 같은 야외 활동을 고려해 보세요:\\n\\n1. **하이킹**: 친구들과 함께 자연 속에서 하이킹을 즐기면 건강에도 좋고, 대화도 나누기 좋은 기회가 됩니다.\\n   \\n2. **자전거 타기**: 자전거 동호회에 가입해 함께 라이딩을 즐기면 새로운 사람들을 만날 수 있습니다.\\n\\n3. **피크닉**: 친구들이나 새로운 사람들과 함께 공원에서 피크닉을 즐기는 것도 좋은 방법입니다.\\n\\n4. **야외 운동 클래스**: 요가, 필라테스, 댄스 등의 야외 클래스를 찾아보세요. 새로운 사람들을 만나고 운동도 할 수 있습니다.\\n\\n5. **커뮤니티 가드닝**: 지역 커뮤니티에서 운영하는 텃밭에 참여하면 식물도 기르고, 사람들과 소통할 수 있습니다.\\n\\n이 중에서 어떤 것이 마음에 드시나요?'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\n",
     "llm.invoke(messages).content"
@@ -334,7 +442,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "test0116",
+   "display_name": "jin",
    "language": "python",
    "name": "python3"
   },
