--- a/03_LangChain/04_SystemPrompt.ipynb
+++ b/03_LangChain/04_SystemPrompt.ipynb
@@ -45,9 +45,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "API 키가 설정되어 있나요?: sk-proj-7l...\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "from dotenv import load_dotenv\n",
@@ -62,9 +70,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "모델이 성공적으로 초기화되었습니다!\n"
+     ]
+    }
+   ],
    "source": [
     "from langchain.chat_models import init_chat_model\n",
     "\n",
@@ -85,9 +101,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[System Prompt 없음]\n",
+      "안녕하세요! 날씨가 좋다면 야외에서 즐길 수 있는 운동들이 많습니다. 몇 가지 추천해드릴게요:\n",
+      "\n",
+      "1. **조깅이나 러닝**: 공원이나 해변가에서 조깅을 하면 기분이 상쾌해질 거예요.\n",
+      "2. **자전거 타기**: 주변 경치를 즐기며 자전거를 타는 것도 좋습니다.\n",
+      "3. **하이킹**: 가까운 산이나 트레일을 찾아 하이킹을 해보세요. 자연 속에서 걷는 것은 스트레스 해소에 좋습니다.\n",
+      "4. **요가**: 공원에서 요가를 하면 자연과 함께 편안한 시간을 보낼 수 있습니다.\n",
+      "5. **팀 스포츠**: 친구들과 함께 축구, 농구, 배드민턴 등을 즐길 수도 있습니다.\n",
+      "\n",
+      "자신의 취향과 체력에 맞는 운동을 선택해보세요!\n"
+     ]
+    }
+   ],
    "source": [
     "# System Prompt 없이 직접 질문\n",
     "response = llm.invoke(\"안녕하세요! 오늘 날씨가 좋네요. 어떤 운동을 추천해주시겠어요?\")\n",
@@ -107,9 +140,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[System Prompt: 전문 헬스 트레이너]\n",
+      "안녕하세요! 날씨가 좋을 때는 야외에서 운동하기 딱 좋은 시점이죠. 제가 추천해드릴 운동은 **스쿼트**입니다. 스쿼트는 하체 근육을 강화하고 전신의 근력을 향상시키는 데 아주 효과적인 운동입니다. 초보자도 쉽게 할 수 있는 운동이니, 자세한 가이드를 설명해드릴게요.\n",
+      "\n",
+      "### 스쿼트 자세 가이드\n",
+      "\n",
+      "1. **준비 자세**\n",
+      "   - 발은 어깨너비 정도로 벌리고, 발가락은 약간 바깥쪽으로 향하게 합니다.\n",
+      "   - 엉덩이를 뒤로 빼고, 복부는 긴장시켜서 몸의 중심을 잡습니다.\n",
+      "   - 가슴은 펴고, 어깨는 자연스럽게 뒤로 젖혀줍니다. 시선은 앞쪽을 바라봅니다.\n",
+      "\n",
+      "2. **하강 동작**\n",
+      "   - 엉덩이를 뒤로 빼면서 무릎을 굽혀줍니다. 이때 무릎은 발끝을 넘지 않도록 주의합니다.\n",
+      "   - 허리는 곧게 펴고, 등을 구부리지 않도록 합니다. \n",
+      "   - 허벅지가 바닥과 평행이 될 때까지 내려갑니다. 이때 엉덩이가 뒤로 빠지면서 체중이 발뒤꿈치에 실리도록 합니다.\n",
+      "\n",
+      "3. **상승 동작**\n",
+      "   - 무릎을 펴면서 천천히 일어납니다. 이때 엉덩이를 앞으로 밀어주면서 허리를 곧게 유지합니다.\n",
+      "   - 다시 준비 자세로 돌아오면 됩니다.\n",
+      "\n",
+      "### 안전 수칙\n",
+      "- **무릎**: 스쿼트를 할 때 무릎이 안쪽으로 들어가지 않도록 주의하세요. 무릎이 발끝과 같은 방향을 바라봐야 합니다.\n",
+      "- **허리**: 허리와 등을 곧게 유지하는 것이 중요합니다. 허리가 굽거나 과도하게 젖혀지지 않도록 합니다.\n",
+      "- **호흡**: 하강할 때 숨을 들이쉬고, 상승할 때 내쉬는 것이 좋습니다.\n",
+      "\n",
+      "### 팁\n",
+      "- 처음에는 자신의 몸무게만으로 연습해보세요. 점차적으로 덤벨이나 바벨을 추가하여 강도를 높일 수 있습니다.\n",
+      "- 운동 후에는 충분한 스트레칭을 통해 근육의 긴장을 풀어주는 것도 잊지 마세요.\n",
+      "\n",
+      "스쿼트는 하체뿐만 아니라 코어 근육도 함께 단련할 수 있는 좋은 운동입니다. 건강한 몸을 위해 꾸준히 시도해보세요!\n"
+     ]
+    }
+   ],
    "source": [
     "from langchain_core.prompts import ChatPromptTemplate\n",
     "\n",
@@ -154,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,9 +254,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[추상적인 System Prompt]\n",
+      "자전거 체인이 빠졌다면 다음과 같은 단계를 따라 문제를 해결해 보세요:\n",
+      "\n",
+      "1. **안전한 장소로 이동**: 자전거를 안전한 곳에 두고 작업할 수 있는 공간을 확보하세요.\n",
+      "\n",
+      "2. **체인 상태 확인**: 체인이 왜 빠졌는지 확인합니다. 체인이 늘어났거나 손상되었는지 살펴보세요.\n",
+      "\n",
+      "3. **체인 위치 맞추기**: 체인을 다시 맞추려면, 자전거의 뒷바퀴를 살짝 들어서 체인이 스프로킷에 잘 맞도록 합니다.\n",
+      "\n",
+      "4. **체인 장착**: 체인을 스프로킷에 맞추고, 페달을 천천히 돌려 체인이 스프로킷과 앞 기어에 잘 장착되도록 합니다.\n",
+      "\n",
+      "5. **체인 점검**: 체인이 제대로 장착되었는지 확인하고, 페달을 몇 번 돌려보세요. 소음이나 이상이 없다면 정상입니다.\n",
+      "\n",
+      "6. **정기 점검**: 체인이 자주 빠지는 경우, 자전거의 기어 또는 체인 상태를 점검하고 필요시 정비하세요.\n",
+      "\n",
+      "문제가 지속되면 가까운 자전거 수리점에 방문하는 것이 좋습니다. 도움이 필요하면 말씀해 주세요!\n",
+      "\n",
+      "================================================================================\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# 추상적 System Prompt 결과\n",
     "chain1 = abstract_template | llm\n",
@@ -200,9 +295,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[구체적인 System Prompt]\n",
+      "자전거 체인이 빠진 경우, 다음과 같은 단계를 따라 주시기 바랍니다. 먼저, 자전거를 안전한 위치에 세우고 체인을 바닥에서 들어 올려서 위치를 맞춰 주세요. 그 후, 체인을 크랭크와 스프라켓에 맞게 끼워 주시면 됩니다. 추가 질문이 있으신가요?\n",
+      "\n",
+      "================================================================================\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# 구체적 System Prompt 결과\n",
@@ -234,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,9 +373,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[대화 1]\n",
+      "좋아요! 기본 문법(basic grammar)을 배우는 것은 아주 중요해요. 영어 문법의 기초를 함께 살펴볼까요?\n",
+      "\n",
+      "1. **주어(SUBJECT)**: 문장에서 행동을 하는 사람이나 사물이에요. 예: \"I (나)\" \n",
+      "2. **동사(VERB)**: 주어가 하는 행동이에요. 예: \"eat (먹다)\"\n",
+      "3. **목적어(OBJECT)**: 동사의 행동을 받는 대상을 말해요. 예: \"an apple (사과)\"\n",
+      "\n",
+      "예문을 들어볼게요: \"I eat an apple.\" (나는 사과를 먹는다.)\n",
+      "\n",
+      "이 문장에서 \"I\"는 주어, \"eat\"는 동사, \"an apple\"은 목적어예요. \n",
+      "\n",
+      "정말 잘하고 계세요! 더 배우고 싶은 내용이 있다면 말씀해 주세요!\n"
+     ]
+    }
+   ],
    "source": [
     "# 첫 번째 질문\n",
     "response1 = chain.invoke({\n",
@@ -346,7 +472,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "test0116",
+   "display_name": "jin",
    "language": "python",
    "name": "python3"
   },
