--- a/03_LangChain/05_Document.ipynb
+++ b/03_LangChain/05_Document.ipynb
@@ -20,10 +20,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "7f2e39d0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'langchain.schema'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mlangchain\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mschema\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m Document\n\u001b[32m      3\u001b[39m \u001b[38;5;66;03m# 기본적인 Document 객체 생성\u001b[39;00m\n\u001b[32m      4\u001b[39m doc = Document(\n\u001b[32m      5\u001b[39m     page_content=\u001b[33m\"\u001b[39m\u001b[33m이것은 문서의 내용입니다.\u001b[39m\u001b[33m\"\u001b[39m,\n\u001b[32m      6\u001b[39m     metadata={\n\u001b[32m   (...)\u001b[39m\u001b[32m     11\u001b[39m     }\n\u001b[32m     12\u001b[39m )\n",
+      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'langchain.schema'"
+     ]
+    }
+   ],
    "source": [
     "from langchain.schema import Document\n",
     "\n",
@@ -45,7 +57,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "test0116",
+   "display_name": "jin",
    "language": "python",
    "name": "python3"
   },
